--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,31 +3,31 @@ name: Run Mockito Unit Tests for RetailPro
 on:
   push:
     branches:
-    - main
-pull_request:
-  branches:
-    - main
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  test-techcorp:
-    name: Test RetailPro with Mockito and SonarCloud
-runs-on: ubuntu-latest
+  test-retailpro:
+    name: Test RetailPro with Mockito
+    runs-on: ubuntu-latest
 
-steps:
-  - name: Checkout repository
-    uses: actions/checkout@v2
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-  - name: Set up JDK 11
-    uses: actions/setup-java@v2
-    with:
-      java-version: 11
-      distribution: 'adopt'
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: 11
+          distribution: 'adopt'
 
-  - name: Build RetailPro project
-    run: mvn -f pom.xml clean test
+      - name: Set up SonarCloud analysis
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  - name: SonarCloud Scan
-    uses: sonarsource/sonarcloud-github-action@v1
-    env:
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build RetailPro project
+        run: mvn -f pom.xml clean test
