--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,31 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- Ajout des propriétés pour SonarCloud -->
+        <sonar.projectKey>votre_clé_de_projet_Sonar</sonar.projectKey>
+        <sonar.organization>votre_organisation_Sonar</sonar.organization>
     </properties>
+
+    <build>
+        <plugins>
+            <!-- Plugin pour compiler le projet -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <release>11</release>
+                </configuration>
+            </plugin>
+            <!-- Plugin SonarScanner Maven -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
