--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_PROJECT_KEY: "Naadjiim_Atelier2-part2"
-          SONAR_ORGANIZATION: "naadjiim"
+          organization: naadjiim
+          projectKey: Naadjiim_Atelier2-part2
 
       - name: Build RetailPro project
         run: mvn -f pom.xml clean test
