change github action sonarCloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=Naadjiim_Atelier2-part2
 sonar.organization=naadjiim
 sonar.projectName=Nom_de_votre_projet
 sonar.sources=src
-sonar.tests=test
+sonar.tests=src/test
 sonar.java.binaries=target/classes
 sonar.java.test.binaries=target/test-classes
 sonar.java.libraries=target/*.jar
