--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=Naadjiim_Atelier2-part2
 sonar.organization=naadjiim
 sonar.projectName=Nom_de_votre_projet
-sonar.sources=src
+sonar.sources=src/main
 sonar.tests=src/test
 sonar.java.binaries=target/classes
 sonar.java.test.binaries=target/test-classes
@@ -9,3 +9,4 @@ sonar.java.libraries=target/*.jar
 sonar.junit.reportPaths=target/surefire-reports
 sonar.java.coveragePlugin=jacoco
 sonar.jacoco.reportPaths=target/jacoco.exec
+sonar.exclusions=**/build/**, **/target/**
