--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=Naadjiim_Atelier2-part2
 sonar.organization=naadjiim
-sonar.projectName=Nom_de_votre_projet
+sonar.projectName=Atelier2-part2
 sonar.sources=src/main
 sonar.tests=src/test
 sonar.java.binaries=target/classes
@@ -9,4 +9,4 @@ sonar.java.libraries=target/*.jar
 sonar.junit.reportPaths=target/surefire-reports
 sonar.java.coveragePlugin=jacoco
 sonar.jacoco.reportPaths=target/jacoco.exec
-sonar.exclusions=**/build/**, **/target/**
+sonar.exclusions=**/build/**
