--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=naadjiim
 sonar.projectName=Atelier2-part2
 sonar.sources=src/main
 sonar.tests=src/test
-sonar.java.binaries=target
+sonar.java.binaries=.
 sonar.java.test.binaries=target/test-classes
 sonar.java.libraries=target/*.jar
 sonar.junit.reportPaths=target/surefire-reports
