--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,9 +3,10 @@ sonar.organization=naadjiim
 sonar.projectName=Atelier2-part2
 sonar.sources=src/main
 sonar.tests=src/test
-sonar.java.binaries=.
-sonar.java.test.binaries=.
-sonar.java.libraries=.
-sonar.junit.reportPaths=.
+sonar.java.binaries=target/classes
+sonar.java.test.binaries=target/test-classes
+sonar.java.libraries=target/*.jar
+sonar.junit.reportPaths=target/surefire-reports
 sonar.java.coveragePlugin=jacoco
-sonar.jacoco.reportPaths=.
+sonar.jacoco.reportPaths=target/jacoco.exec
+
