--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,11 @@ jobs:
           java-version: 11
           distribution: 'adopt'
 
+      - name: Build RetailPro project
+        run: mvn -f pom.xml clean test
 
       - name: Set up SonarCloud analysis
-        run: mvn -f pom.xml clean test
         uses: sonarsource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-
