--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,5 +5,7 @@ sonar.sources=src/main
 sonar.tests=src/test
 sonar.java.binaries=target/classes
 sonar.java.test.binaries=target/test-classes
+sonar.junit.reportPaths=target/surefire-reports
 sonar.java.coveragePlugin=jacoco
+sonar.jacoco.reportPaths=target/jacoco.exec
 
